--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,28 @@
+/** @format */
+
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
+* {
+  scroll-behavior: smooth;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    @apply px-2 md:px-5 lg:px-20 xl:px-40 bg-slate-50;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.slick-dots li.slick-active div {
+  @apply bg-red-400 transition-all ease-in-out duration-500 w-6 h-3; /* active dot larger & blue */
+}
+.slick-slide > div {
+  margin: 0 10px;
+  display: block;
+}
+
+.slick-list {
+  margin: 0 -10px;
 }
